--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==3.0.7
 django-bootstrap3==14.0.0
+django-crispy-forms==1.9.1
 django-heroku==0.3.1
 django-registration==3.1
+django-tinymce==3.0.2
 gunicorn==20.0.4
 importlib-metadata==1.6.1
 isort==4.3.21
